2012-02-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/graphs/functions_pchart.php
	 include/functions_visual_map.php: Improvement over module graphs in 
	 visual console and fixed bug in sparse graphs when 'avg only' is not
	 clicked.

2012-02-02  Sancho Lerena <slerena@artica.es>

        * godmode/massive/massive_edit_modules.php: Fixed problem with export
        server target edition. "None" was missing.


2012-01-31  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_reporting: Modified SLA reports when
	downtime planned.

2012-01-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php

	Bigfix merged from trunk.

2012-01-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: 
	
	Bugfix merged from trunk.

2012-01-25  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php: Fixed: bad behavior group
	filter in massive operations and policies management.

2012-01-25  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php: Fixed bug: Don't show
	good agents modules.

2010-01-24 Javier Lanz <javier.lanz@artica.es>

	* godmode/massive/massive_delete_modules.php: Fixed a small entities
	bug. Added io_safe_output

2012-01-24  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/agentes/estado_agente.php: Simplify code estado_agente
	and fix bug in search filter.

2012-01-24  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_agents.php, include/functions_alerts.php,
	include/functions_profile.php, include/functions_users.php,
	include/functions_network_components.php,
	include/functions_groups.php: Merged from trunk. Required
	update for the previous changes on include/functions_api.php.

2012-01-24  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk. Added new
	functions to API set_create_module_template,